--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "busboy": "^0.3.1",
     "colors": "^1.4.0",
+    "connect-busboy": "0.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "firebase": "^8.2.5",
     "firebase-admin": "^9.4.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "uuidv4": "^6.2.6"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
