--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server",
-    "server": "nodemon server",
-    "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "server": "nodemon server"
   },
   "author": "Jake Keay",
   "license": "MIT",
@@ -23,8 +21,5 @@
     "morgan": "^1.10.0",
     "uuidv4": "^6.2.6"
   },
-  "devDependencies": {
-    "concurrently": "^5.3.0",
-    "nodemon": "^2.0.7"
-  }
+  "devDependencies": {}
 }
